--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -16,6 +16,8 @@
     }
   },
   "snack_bar": {
-    "welcome_back_username": "Добро пожаловать, @{username}!"
+    "welcome_back": "Рады видеть тебя снова!",
+    "auth_failed": "Вход не удался! Пожалуйста, попробуйте еще раз.",
+    "password_recovery": "Восстановление пароля в процессе..."
   }
 }
